backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ai-devops

  annotations:
    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 8000

      - path: /ai
        pathType: Prefix

        backend:
          service:
            name: ai-engine-service

            port:
              number: 5000
